--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">carPool</string>
+    <string name="app_name">Lucas Amazing Car Pool Super App! </string>
 </resources>
